# rust-backtester-stat-arb

./: Cargo.toml  README.md
data/: data.csv
src/: backtest.rs  evaluation.rs  lib.rs  models.rs  utils.rs
