[package]
name = "backtester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
ndarray = "0.15.6"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"

[dev-dependencies]
tradestats = "0.1.7"
