[package]
name = "backtester"
version = "0.1.5"
edition = "2021"
authors = ["Code Raiders", "Shaun McDonogh"]
description = "Backtester"
license = "LGPL-2.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"

[dev-dependencies]
tradestats = "0.1.7"
csv = "1.2.2"
